--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
     "gulp-install": "^1.1.0",
