--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
     "gulp-install": "^1.1.0",
+    "gulp-kit": "^0.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
